current date added

--- a/blogs.html
+++ b/blogs.html
@@ -42,7 +42,7 @@
             </div>
            </div>
            <div class="">
-            <button class="btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Back to Desk</button>
+            <a href="index.html"><button class="btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Back to Desk</button></a>
            </div> 
         </nav>
     </header>
