alert showing perfectly after clicked

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
     <!-- main section end -->
      <!-- script link -->
       <script src="./Js/devBoard.js"></script>
+      <script src="./Js/function.js"></script>
       <script src="./Js/bonus.js"></script>
 
 </body>
