container history added

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="bg-light-sky rounded-2xl p-6">
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">ShopEase</button>
-                            <h3 class="text-2xl font-medium text-dark-teal">Fix Mobile Button Issue </h3>
+                            <h3 class="task-title text-2xl font-medium text-dark-teal">Fix Mobile Button Issue </h3>
                             <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Debug using Chrome DevTools, check for overlapping...</p>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
@@ -114,7 +114,7 @@
                     <div class="bg-light-sky rounded-2xl p-6">
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">CloudSync</button>
-                            <h3 class="text-2xl font-medium text-dark-teal">Add Dark Mode </h3>
+                            <h3 class="task-title text-2xl font-medium text-dark-teal">Add Dark Mode </h3>
                             <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Store the user's preference in localStorage, update CSS varia...</p>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
@@ -131,7 +131,7 @@
                     <div class="bg-light-sky rounded-2xl p-6">
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">SwiftPay</button>
-                            <h3 class="text-2xl font-medium text-dark-teal">Optimize  Home page  </h3>
+                            <h3 class="task-title text-2xl font-medium text-dark-teal">Optimize  Home page  </h3>
                             <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">SDebug using Chrome DevTools, check for overlappin...</p>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
@@ -148,7 +148,7 @@
                     <div class="bg-light-sky rounded-2xl p-6">
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">Meta</button>
-                            <h3 class="text-2xl font-medium text-dark-teal">Add new emoji 🤲 </h3>
+                            <h3 class="task-title text-2xl font-medium text-dark-teal">Add new emoji 🤲 </h3>
                             <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Debug using Chrome DevTools, check for overlappin...</p>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
@@ -165,7 +165,7 @@
                     <div class="bg-light-sky rounded-2xl p-6">
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">Google LLC</button>
-                            <h3 class="text-2xl font-medium text-dark-teal">Integrate OpenAI API </h3>
+                            <h3 class="task-title text-2xl font-medium text-dark-teal">Integrate OpenAI API </h3>
                             <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Store the user's preference in localStorage, update CSS varia...</p>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
@@ -182,7 +182,7 @@
                     <div class="bg-light-sky rounded-2xl p-6">
                         <div class="flex flex-col gap-4 justify-center items-start">
                             <button class="btn text-base font-medium rounded-lg text-dark bg-white py-2 px-5 ">Glassdoar</button>
-                            <h3 class="text-2xl font-medium text-dark-teal">Improve Job searching</h3>
+                            <h3 class="task-title text-2xl font-medium text-dark-teal">Improve Job searching</h3>
                             <p class="text-base font-normal text-dark bg-white rounded-lg p-4 mb-3">Debug using Chrome DevTools, check for overlappi...</p>
                         </div>
                         <div class="flex flex-row justify-between items-center border-t-2 border-dashed border-[#3751fd14] py-3">
