random backgroundcolor and history clear btn function added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="bg-light-sky p-3 rounded-full">
-                <img class="w-10" src="assets/theme-btn.png" alt="">
+                <img id="theme-img" class="w-10" src="assets/theme-btn.png" alt="">
             </div>
            </div> 
         </nav>
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="border-b-2 border-dashed border-[#3751fd14] pb-3 text-center ">
-                    <button class="btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Clear History</button>
+                    <button id="clear-history-btn" class="btn text-base font-medium rounded-lg text-white bg-blue py-2 px-5">Clear History</button>
                 </div>
                 <div id="history-container">
 
